# SimpleScriptEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md
cmake/: DownloadUnzipProject.cmake  ExecuteDownloadProjects.cmake  ios.toolchain.cmake
examples/SSEPakDemo/: CMakeLists.txt  main.cpp
examples/SimpleScriptEngineExample/: CMakeLists.txt  main.cpp
examples/SimpleScriptEngineLuaGetSystemInfo/: CMakeLists.txt  main.cpp  sysinfo-linux.lua  sysinfo-macos.lua  sysinfo-windows.lua
src/SimpleScriptEngine/: CMakeLists.txt  SimpleScriptEngine.cpp  SimpleScriptEngine.h  SimpleScriptManager.cpp  SimpleScriptManager.h  SimpleScriptValue.cpp  SimpleScriptValue.h
src/SimpleScriptEngine/Crypto/: SSEAntiDebug.cpp  SSEAntiDebug.h  SSECrypto.cpp  SSECrypto.h  SSEKeyManager.cpp  SSEKeyManager.h  SSEPakFormat.h  SSEPakLoader.cpp  SSEPakLoader.h  SSEPakReader.cpp  SSEPakReader.h
src/SimpleScriptEngine/Engines/: AngelScriptEngine.cpp  AngelScriptEngine.h  ChaiScriptEngine.cpp  ChaiScriptEngine.h  LuaJITEngine.cpp  LuaJITEngine.h  QuickJSEngine.cpp  QuickJSEngine.h
tools/SSEPakBuilder/: CMakeLists.txt  main.cpp
